Reload Library Override file loses Constraints #93353

Closed
opened 2021-11-24 12:14:50 +01:00 by Konstantins Visnevskis · 18 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.39

Blender Version
Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-23 18:03, hash: 3844e9dbe7
Worked: on some computers(!?) 2.93.6

Short description of error
Reloading Library override loses constraints on overridden objects. I wouldn't think this to be a bug if it wouldn't turn out it didn't happen on other computer with Blender before 3.0.
On some win10 machines it happens right away after Outliner->Reload, on others it takes Relocate+Reload or just Reload twice.
Also confirmed on Linux

Exact steps for others to reproduce the error
override_Suzanne.blend
src_Suzanne.blend

  • Open "override_Suzanne.blend"
  • Outliner -> Linked File -> Reload (constraints disappear in all versions but only on some Win10 machines)
  • Outliner -> Linked File -> Reload again (constraints dfisappear on all Win10 machines starting with 3.0 and some machines before 3.0)
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.39 **Blender Version** Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-23 18:03, hash: `3844e9dbe7` Worked: on some computers(!?) 2.93.6 **Short description of error** Reloading Library override loses constraints on overridden objects. I wouldn't think this to be a bug if it wouldn't turn out it didn't happen on other computer with Blender before 3.0. On some win10 machines it happens right away after Outliner->Reload, on others it takes Relocate+Reload or just Reload twice. Also confirmed on Linux **Exact steps for others to reproduce the error** [override_Suzanne.blend](https://archive.blender.org/developer/F11979943/override_Suzanne.blend) [src_Suzanne.blend](https://archive.blender.org/developer/F11979944/src_Suzanne.blend) - Open "override_Suzanne.blend" - Outliner -> Linked File -> Reload (constraints disappear in all versions but only on some Win10 machines) - Outliner -> Linked File -> Reload again (constraints dfisappear on all Win10 machines starting with 3.0 and some machines before 3.0)

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @gintszilbalodis

Added subscriber: @gintszilbalodis

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm.
Could have sworn this was tackled before, but can only find #90570 (Constraint validity not updated with library overrides) which afaict has the constraints not local.

@mont29: does this ring a bell?

Can confirm. Could have sworn this was tackled before, but can only find #90570 (Constraint validity not updated with library overrides) which afaict has the constraints not local. @mont29: does this ring a bell?
Philipp Oeser changed title from Reload Lybrary Override file loses Constraints to Reload Library Override file loses Constraints 2021-11-24 14:14:53 +01:00

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

I can confirm this on blender-v3.0-release @ 82808e18e6

Outliner -> Linked File -> Reload (constraints disappear in all versions but only on some Win10 machines)

This also happens here, on Linux. Also when I Relocate instead of Reload, the constraints are gone.

I can confirm this on blender-v3.0-release @ 82808e18e6 > Outliner -> Linked File -> Reload (constraints disappear in all versions but only on some Win10 machines) This also happens here, on Linux. Also when I Relocate instead of Reload, the constraints are gone.

Let's dare setting this to High prio then?

Let's dare setting this to High prio then?

Added subscriber: @Wovchick

Added subscriber: @Wovchick

This issue was referenced by e253fb2143

This issue was referenced by e253fb2143e2a8f1de331d17343d44671ab6e440
Bastien Montagne self-assigned this 2021-11-25 14:52:31 +01:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Tested with
3.0.0 Release Candidate, branch: master, commit date: 2021-11-27 18:08, hash: d2e6087335
and constraints still disappear.

Suzanne-src.blend
Suzanne-lnk.blend

  • Open Suzanne-lnk.blend
  • Outliner -> Reload on Suzanne-src.blend
Tested with 3.0.0 Release Candidate, branch: master, commit date: 2021-11-27 18:08, hash: `d2e6087335` and constraints still disappear. [Suzanne-src.blend](https://archive.blender.org/developer/F12647344/Suzanne-src.blend) [Suzanne-lnk.blend](https://archive.blender.org/developer/F12647345/Suzanne-lnk.blend) - Open Suzanne-lnk.blend - Outliner -> Reload on Suzanne-src.blend

In #93353#1261540, @KonstantinsVisnevskis wrote:
Tested with
3.0.0 Release Candidate, branch: master, commit date: 2021-11-27 18:08, hash: d2e6087335
and constraints still disappear.

Suzanne-src.blend
Suzanne-lnk.blend

  • Open Suzanne-lnk.blend
  • Outliner -> Reload on Suzanne-src.blend

Cannot reproduce in 2206b6b9a0 (also not with the original files from the report)

> In #93353#1261540, @KonstantinsVisnevskis wrote: > Tested with > 3.0.0 Release Candidate, branch: master, commit date: 2021-11-27 18:08, hash: `d2e6087335` > and constraints still disappear. > > [Suzanne-src.blend](https://archive.blender.org/developer/F12647344/Suzanne-src.blend) > [Suzanne-lnk.blend](https://archive.blender.org/developer/F12647345/Suzanne-lnk.blend) > > - Open Suzanne-lnk.blend > - Outliner -> Reload on Suzanne-src.blend Cannot reproduce in 2206b6b9a0 (also not with the original files from the report)

Re-checked - it doesn't occur indeed except for situation when the override is created anew and the file wasn't closed (re-opened) since.

  • File->Link->"Suzanne-src.blend"->Collection->Collection
  • Object->Relations->Make Library Override
  • Add object constraint->Copy Location
  • Reload Library -> Constraint is gone
Re-checked - it doesn't occur indeed except for situation when the override is created anew and the file wasn't closed (re-opened) since. - File->Link->"Suzanne-src.blend"->Collection->Collection - Object->Relations->Make Library Override - Add object constraint->Copy Location - Reload Library -> Constraint is gone

In #93353#1262074, @KonstantinsVisnevskis wrote:

  • File->Link->"Suzanne-src.blend"->Collection->Collection

"Collection" just contains an invisible camera. I'll assume this should be "Collection 2", as that contains Suzanne and thus actually has some visual content.

I can confirm this is still an issue when you don't save-and-reload the blend file.

> In #93353#1262074, @KonstantinsVisnevskis wrote: > - File->Link->"Suzanne-src.blend"->Collection->Collection "Collection" just contains an invisible camera. I'll assume this should be "Collection 2", as that contains Suzanne and thus actually has some visual content. I can confirm this is still an issue when you don't save-and-reload the blend file.

This issue was referenced by cbc6c3938d

This issue was referenced by cbc6c3938d186852bebecb9847694195100dde9f

This issue was referenced by ca6acceb60

This issue was referenced by ca6acceb606fd4d4bffd61a1f3efe307f04ee7ac

This issue was referenced by de7f1e8e07

This issue was referenced by de7f1e8e070be93daf8e1a2c7c96f94cabc34867
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:58:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93353
There is no content yet.