Fix T93353: Reload Library used as source for liboverride loses Constraints.

Liboverride properties and operations list need to be fully up-to-date
before libraries are reloaded, otherwise re-applying those liboverrides
after linked data is reloaded may miss some changes.